--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script>
+    window.BASE_URL = "{{ .BASE_URL }}"
+  </script>
   <title>S-UI</title>
 </head>
 
